kubernetes/serviceA/overlays/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicea
spec:
  ingressClassName: nginx
  rules:
    - host: servicea-main.192.168.5.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicea
                port:
                  number: 80
